# conversation-friction

./: .gitignore  README.md  check_model.py  pyproject.toml  requirements.txt  setup.py
data/results/conversation_friction_v1/1b/: behavioral_report.txt  checkpoint_20251223_152727.json  checkpoint_20251223_174547.json  results_20251223_150030.json  results_20251223_150833.json
data/results/conversation_friction_v1/4b/: behavioral_report.txt  checkpoint_20251223_181904.json  checkpoint_20251223_202638.json  results_20251223_152546.json  transcript_comparison.html
experiment/: __init__.py  activation_hooks.py  config.py  conversation.py  dataset.py  interruption_probe.py  main.py  topic_selection.py
experiment/analysis/: __init__.py  behavioral.py  probes.py  sae_features.py
scripts/: cloud_setup.sh  run_experiments.sh  slurm_template.sh  submit_all.sh
scripts/blythe/: .rsync-exclude  fetch_results.sh  sync_to_hpc.sh
scripts/blythe/slurm/: friction_12b.slurm  friction_27b.slurm  friction_4b.slurm  probe_12b.slurm  probe_4b.slurm  setup_hpc.sh
